Render search results page

--- a/next-atomic-airbnb-segment/next-atomic-airbnb-segment/package.json
+++ b/next-atomic-airbnb-segment/next-atomic-airbnb-segment/package.json
@@ -11,6 +11,7 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-google-maps": "^9.4.5"
+    "react-google-maps": "^9.4.5",
+    "react-router-dom": "^5.2.0"
   }
 }
